--- a/EP2 06-10/index.html
+++ b/EP2 06-10/index.html
@@ -148,7 +148,8 @@
             </div>
         </div>
     </div>
-    </div>
+    </div>     
+    
     <!-- Fim Galeria -->
     <!-- Início Imagem 1 Galeria -->
     <div class="gallery col-6 col-md-3">
@@ -226,7 +227,7 @@
             <div class="container">
                 <div class="row m-0">
                     <!-- inicio do loga -->
-                    <div>
+                    <div class="col-md-4">
                         <figure>
                             <img src="img/senai.png" alt="logo-rodape" width="40%">
                         </figure>
@@ -236,7 +237,7 @@
             </div>
         </footer>
     </div>
-
+            
 </body>
 <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
 </html>
