--- a/EP2 06-10/index.html
+++ b/EP2 06-10/index.html
@@ -136,108 +136,146 @@
 
     </div>
     <!-- Início Galeria --->
-    <div class="galeria d-flex align-items-center">
-    <div class="container">
-        <div class="row">
-            <div class="col-12">
-                <section class="texto-galeria">
-                    <h2>Conheça nossa galeria</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa delectus et dignissimos animi totam repellendus amet quae rerum maiores? Veritatis debitis voluptatem sequi asperiores ducimus mollitia ad necessitatibus possimus nesciunt!</p>
-
-                </section>
-            </div>
-        </div>
-    </div>
-    </div>     
-    
-    <!-- Fim Galeria -->
-    <!-- Início Imagem 1 Galeria -->
-    <div class="gallery col-6 col-md-3">
-        <img class="img-fluid" src="img/mario-bros.jpg" alt="img-galeria">   
-    </div>
-     <!-- Fim da imagem 1 galeria -->
-
-     <!-- Início Imagem 2 Galeria -->
-     <div class="gallery col-6 col-md-3">
-        <img class="img-fluid" src="img/mario-bros.jpg" alt="img-galeria">   
-    </div>
-     <!-- Fim da imagem 2 galeria -->
-
-     <!-- Início Imagem 3 Galeria -->
-     <div class="gallery col-6 col-md-3">
-        <img class="img-fluid" src="img/mario-bros.jpg" alt="img-galeria">   
-    </div>
-     <!-- Fim da imagem 3 galeria -->
-
-     <!-- Início Imagem 4 Galeria -->
-     <div class="gallery col-6 col-md-3">
-        <img class="img-fluid" src="img/mario-bros.jpg" alt="img-galeria">   
-    </div>
-     <!-- Fim da imagem 4 galeria -->
-
-     <!-- Início Imagem 5 Galeria -->
-     <div class="gallery col-6 col-md-3">
-        <img class="img-fluid" src="img/mario-bros.jpg" alt="img-galeria">   
-    </div>
-     <!-- Fim da imagem 5 galeria -->
-
-     <!-- Início Imagem 6 Galeria -->
-     <div class="gallery col-6 col-md-3">
-        <img class="img-fluid" src="img/mario-bros.jpg" alt="img-galeria">   
-    </div>
-     <!-- Fim da imagem 6 galeria -->
-
-     <!-- Início Imagem 7 Galeria -->
-     <div class="gallery col-6 col-md-3">
-        <img class="img-fluid" src="img/mario-bros.jpg" alt="img-galeria">   
-    </div>
-     <!-- Fim da imagem 7 galeria -->
-
-     <!-- Início Imagem 8 Galeria -->
-     <div class="gallery col-6 col-md-3">
-        <img class="img-fluid" src="img/mario-bros.jpg" alt="img-galeria">   
-    </div>
-     <!-- Fim da imagem 8 galeria -->
-
-     <!-- Início Imagem 9 Galeria -->
-     <div class="gallery col-6 col-md-3">
-        <img class="img-fluid" src="img/mario-bros.jpg" alt="img-galeria">   
-    </div>
-     <!-- Fim da imagem 9 galeria -->
-
-     <!-- Início Imagem 10 Galeria -->
-     <div class="gallery col-6 col-md-3">
-        <img class="img-fluid" src="img/mario-bros.jpg" alt="img-galeria">   
-    </div>
-     <!-- Fim da imagem 10 galeria -->
-
-     <!-- Início Imagem 11 Galeria -->
-     <div class="gallery col-6 col-md-3">
-        <img class="img-fluid" src="img/mario-bros.jpg" alt="img-galeria">   
-    </div>
-     <!-- Fim da imagem 11 galeria -->
-
-     <!-- Início Imagem 12 Galeria -->
-     <div class="gallery col-6 col-md-3">
-        <img class="img-fluid" src="img/mario-bros.jpg" alt="img-galeria">   
-    </div>
-    <!-- Fim da imagem 12 galeria -->
-    <div>
-        <footer class="rodape">
+        <div class="galeria d-flex align-items-center">
             <div class="container">
-                <div class="row m-0">
-                    <!-- inicio do loga -->
-                    <div class="col-md-4">
-                        <figure>
-                            <img src="img/senai.png" alt="logo-rodape" width="40%">
-                        </figure>
-                    </div> 
-                    <!-- fim do logo -->
+                <div class="row">
+                    <div class="col-12">
+                        <section class="texto-galeria">
+                            <h2>Conheça nossa galeria</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa delectus et dignissimos animi totam repellendus amet quae rerum maiores? Veritatis debitis voluptatem sequi asperiores ducimus mollitia ad necessitatibus possimus nesciunt!</p>
+
+                        </section>
+                    </div>         
+            <!-- Fim Galeria -->
+
+                    <!-- Início Imagem 1 Galeria -->
+                    <div class="gallery col-6 col-md-3">
+                        <img class="img-fluid" src="img/mario-bros.jpg" alt="img-galeria">   
+                    </div>
+                    <!-- Fim da imagem 1 galeria -->
+
+                    <!-- Início Imagem 2 Galeria -->
+                    <div class="gallery col-6 col-md-3">
+                        <img class="img-fluid" src="img/mario-bros.jpg" alt="img-galeria">   
+                    </div>
+                    <!-- Fim da imagem 2 galeria -->
+
+                    <!-- Início Imagem 3 Galeria -->
+                    <div class="gallery col-6 col-md-3">
+                        <img class="img-fluid" src="img/mario-bros.jpg" alt="img-galeria">   
+                    </div>
+                    <!-- Fim da imagem 3 galeria -->
+
+                    <!-- Início Imagem 4 Galeria -->
+                    <div class="gallery col-6 col-md-3">
+                        <img class="img-fluid" src="img/mario-bros.jpg" alt="img-galeria">   
+                    </div>
+                    <!-- Fim da imagem 4 galeria -->
+
+                    <!-- Início Imagem 5 Galeria -->
+                    <div class="gallery col-6 col-md-3">
+                        <img class="img-fluid" src="img/mario-bros.jpg" alt="img-galeria">   
+                    </div>
+                    <!-- Fim da imagem 5 galeria -->
+
+                    <!-- Início Imagem 6 Galeria -->
+                    <div class="gallery col-6 col-md-3">
+                        <img class="img-fluid" src="img/mario-bros.jpg" alt="img-galeria">   
+                    </div>
+                    <!-- Fim da imagem 6 galeria -->
+
+                    <!-- Início Imagem 7 Galeria -->
+                    <div class="gallery col-6 col-md-3">
+                        <img class="img-fluid" src="img/mario-bros.jpg" alt="img-galeria">   
+                    </div>
+                    <!-- Fim da imagem 7 galeria -->
+
+                    <!-- Início Imagem 8 Galeria -->
+                    <div class="gallery col-6 col-md-3">
+                        <img class="img-fluid" src="img/mario-bros.jpg" alt="img-galeria">   
+                    </div>
+                    <!-- Fim da imagem 8 galeria -->
+
+                    <!-- Início Imagem 9 Galeria -->
+                    <div class="gallery col-6 col-md-3">
+                        <img class="img-fluid" src="img/mario-bros.jpg" alt="img-galeria">   
+                    </div>
+                    <!-- Fim da imagem 9 galeria -->
+
+                    <!-- Início Imagem 10 Galeria -->
+                    <div class="gallery col-6 col-md-3">
+                        <img class="img-fluid" src="img/mario-bros.jpg" alt="img-galeria">   
+                    </div>
+                    <!-- Fim da imagem 10 galeria -->
+
+                    <!-- Início Imagem 11 Galeria -->
+                    <div class="gallery col-6 col-md-3">
+                        <img class="img-fluid" src="img/mario-bros.jpg" alt="img-galeria">   
+                    </div>
+                    <!-- Fim da imagem 11 galeria -->
+
+                    <!-- Início Imagem 12 Galeria -->
+                    <div class="gallery col-6 col-md-3">
+                        <img class="img-fluid" src="img/mario-bros.jpg" alt="img-galeria">   
+                    </div>
+                    <!-- Fim da imagem 12 galeria -->
+                        <footer class="rodape">
+                            <div class="container">
+                                <div class="row m-0">
+                                    <!-- inicio do loga -->
+                                    <div class="col-md-4">
+                                        <figure>
+                                            <img src="img/senai.png" alt="logo-rodape" width="40%">
+                                        </figure>
+                                    </div> 
+                                    <!-- fim do logo -->
+
+                                    <!-- inicio do texto  -->
+                                    <div class="col-md-4">
+                                        <div class="info-contato">
+                                            <p>email:</p>
+                                            <p>example@gmail.com</p><br>
+                                            <p>endereço:</p>
+                                            <p>Avenida: ABC - 123</p><br>
+                                            <p>Telefone:</p>
+                                            <p>+55 (11) 9.9922-5500</p><br>                          
+                                        </div>
+                                    </div>
+                                    <!-- fim do texto-->
+                                    <!-- inicio das midias sociais-->
+
+                                    <!-- Alt + shift + seta para baixo (copia e cola)-->
+                                    <!-- ctrl + espaço (mostra o caminho do arquivo) dentro de src-->
+                                    <div class="col-md-4">
+                                        <figure class="redes-sociais">
+                                            <a href="#"><img src="img/face.png"></a>
+                                            <a href="#"><img src="img/insta.png"></a>
+                                            <a href="#"><img src="img/youtube.png"></a>
+                                            <a href="#"><img src="img/linkedin.png"></a>
+                                        </figure>
+                                        <br>
+                                        <a href="#">Jogos</a><br>
+                                        <a href="#">Hardware</a><br>
+                                        <a href="#">Celulares</a><br>
+                                        <a href="#">pc-gamer</a><br>
+                                        <a href="#">Contato</a><br>
+                                        <a href="#">Login</a><br>
+                                    </div>
+                                    <!-- fim das midias sociais-->
+                                    <!-- inicio dos direitos autorais-->
+                                    <div class="col-12">
+                                        <p class="direitos">Direitos Autorais</p>
+                                    </div>
+                                    <!-- fim dos direitos autorais-->
+                                </div>
+                            </div>
+                        </footer>
+                        <!-- fim do texto da galeria--> 
                 </div>
             </div>
-        </footer>
-    </div>
-            
+        </div>                 
 </body>
+
 <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
+
 </html>
