--- a/EP2 06-10/Contato.html
+++ b/EP2 06-10/Contato.html
@@ -134,6 +134,8 @@
             </div>
         </div>
     </div>
+    
+
     <!-- Início Galeria --->
         <div class="galeria d-flex align-items-center">
             <div class="container">
@@ -220,16 +222,9 @@
                         <footer class="rodape">
                             <div class="container">
                                 <div class="row m-0">
-                                    <!-- inicio do loga -->
-                                    <div class="col-md-4">
-                                        <figure>
-                                            <img src="img/senai.png" alt="logo-rodape" width="40%">
-                                        </figure>
-                                    </div> 
-                                    <!-- fim do logo -->
 
                                     <!-- inicio do texto  -->
-                                    <div class="col-md-4">
+                                    <div class="col-5">
                                         <div class="info-contato">
                                             <p>email:</p>
                                             <p>example@gmail.com</p><br>
@@ -260,6 +255,66 @@
                                         <a href="#">Login</a><br>
                                     </div>
                                     <!-- fim das midias sociais-->
+
+                                    <!-- formulario para contato-->
+
+                                    <div class="container contact">
+                                        <div class="row">
+                                            <div class="col-md-4">
+                                                <div class="contact-info">
+                                                    <img src="https://image.ibb.co/kUASdV/contact-image.png" alt="image"/>
+                                                    <h2>Entre em contato!</h2>
+                                                    <h4>Será um prazer ouvir você!</h4>
+                                                </div>
+                                            </div>
+                                            <div class="col-md-9">
+                                                <div class="contact-form">
+                                                    <div class="form-group">
+                                                    <label class="control-label col-sm-2" for="fname">Primeiro Nome:</label>
+                                                    <div class="col-sm-10">          
+                                                        <input type="text" class="form-control" id="fname" placeholder="Enter First Name" name="fname">
+                                                    </div>
+                                                    </div>
+                                                    <div class="form-group">
+                                                    <label class="control-label col-sm-2" for="lname">Último Nome:</label>
+                                                    <div class="col-sm-10">          
+                                                        <input type="text" class="form-control" id="lname" placeholder="Enter Last Name" name="lname">
+                                                    </div>
+                                                    </div>
+                                                    <div class="form-group">
+                                                    <label class="control-label col-sm-2" for="email">E-mail:</label>
+                                                    <div class="col-sm-10">
+                                                        <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
+                                                    </div>
+                                                    </div>
+                                                    <div class="form-group">
+                                                    <label class="control-label col-sm-2" for="comment">Mensagem:</label>
+                                                    <div class="col-sm-10">
+                                                        <textarea class="form-control" rows="5" id="comment"></textarea>
+                                                    </div>
+                                                    </div>
+                                                    <div class="form-group">        
+                                                    <div class="col-sm-offset-2 col-sm-10">
+                                                        <button type="submit" class="btn btn-default">Enviar</button>
+                                                    </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <br>
+                                    <br>
+                                    <br>
+                                    <!-- Fim do formulario para contato-->                                 
+                                                                  
+                                      <!-- inicio do loga -->
+                                    <div class="col-md-4">
+                                        <figure>
+                                            <img src="img/senai.png" alt="logo-rodape" width="40%">
+                                        </figure>
+                                    </div> 
+                                    <!-- fim do logo -->
+
                                     <!-- inicio dos direitos autorais-->
                                     <div class="col-12">
                                         <p class="direitos">Direitos Autorais</p>
