--- a/EP2 06-10/jogo.html
+++ b/EP2 06-10/jogo.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Primeiro Site</title>
     <link rel="icon" href="" type="image/jpg" sizes="16x16">
-    <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap-grid.min.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 
@@ -25,30 +25,6 @@
             </ul>
         </nav>
     </header>
-
-    <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active" data-bs-interval="5000">
-                <img class="d-block w-100" src="img/img1.jpeg" alt="Primeiro Slide">
-            </div>
-            <div class="carousel-item" data-bs-interval="5000">
-                <img class="d-block w-100" src="img/img2.jpg" alt="Segundo Slide">
-            </div>
-            <div class="carousel-item" data-bs-interval="5000">
-                <img class="d-block w-100" src="img/img3.jpg" alt="Terceiro Slide">
-            </div>
-        </div>           
-                <button class="carousel-control-prev" data-bs-target="#carouselExampleInterval" role="button" data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Anterior</span>
-                </button>
-
-                <button class="carousel-control-next" data-bs-target="#carouselExampleInterval" role="button" data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Proximo</span>
-                </button>           
-    </div>
-
     <div class="section-banner-home">
         <div class="container-fluid">
             <div class="row m-0">
@@ -247,8 +223,6 @@
                             <div class="container">
                                 <div class="row m-0">
 
-                                    
-
                                     <!-- inicio do texto  -->
                                     <div class="col-5">
                                         <div class="info-contato">
@@ -286,7 +260,7 @@
 
                                     <div class="container contact">
                                         <div class="row">
-                                            <div class="col-md-3">
+                                            <div class="col-md-4">
                                                 <div class="contact-info">
                                                     <img src="https://image.ibb.co/kUASdV/contact-image.png" alt="image"/>
                                                     <h2>Entre em contato!</h2>
@@ -296,33 +270,33 @@
                                             <div class="col-md-9">
                                                 <div class="contact-form">
                                                     <div class="form-group">
-                                                      <label class="control-label col-sm-2" for="fname">Primeiro Nome:</label>
-                                                      <div class="col-sm-10">          
+                                                    <label class="control-label col-sm-2" for="fname">Primeiro Nome:</label>
+                                                    <div class="col-sm-10">          
                                                         <input type="text" class="form-control" id="fname" placeholder="Enter First Name" name="fname">
-                                                      </div>
+                                                    </div>
                                                     </div>
                                                     <div class="form-group">
-                                                      <label class="control-label col-sm-2" for="lname">Último Nome:</label>
-                                                      <div class="col-sm-10">          
+                                                    <label class="control-label col-sm-2" for="lname">Último Nome:</label>
+                                                    <div class="col-sm-10">          
                                                         <input type="text" class="form-control" id="lname" placeholder="Enter Last Name" name="lname">
-                                                      </div>
+                                                    </div>
                                                     </div>
                                                     <div class="form-group">
-                                                      <label class="control-label col-sm-2" for="email">E-mail:</label>
-                                                      <div class="col-sm-10">
+                                                    <label class="control-label col-sm-2" for="email">E-mail:</label>
+                                                    <div class="col-sm-10">
                                                         <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
-                                                      </div>
+                                                    </div>
                                                     </div>
                                                     <div class="form-group">
-                                                      <label class="control-label col-sm-2" for="comment">Mensagem:</label>
-                                                      <div class="col-sm-10">
+                                                    <label class="control-label col-sm-2" for="comment">Mensagem:</label>
+                                                    <div class="col-sm-10">
                                                         <textarea class="form-control" rows="5" id="comment"></textarea>
-                                                      </div>
+                                                    </div>
                                                     </div>
                                                     <div class="form-group">        
-                                                      <div class="col-sm-offset-2 col-sm-10">
+                                                    <div class="col-sm-offset-2 col-sm-10">
                                                         <button type="submit" class="btn btn-default">Enviar</button>
-                                                      </div>
+                                                    </div>
                                                     </div>
                                                 </div>
                                             </div>
@@ -334,9 +308,9 @@
                                     <!-- Fim do formulario para contato-->                                 
                                                                   
                                       <!-- inicio do loga -->
-                                    <div class="col-md-4">
+                                    <div class="col-md-5">
                                         <figure>
-                                            <img src="img/senai.png" class="logo-senai" alt="logo-rodape" width="40%">
+                                            <img src="img/senai.png" alt="logo-rodape" width="40%">
                                         </figure>
                                     </div> 
                                     <!-- fim do logo -->
