--- a/EP2 06-10/index.html
+++ b/EP2 06-10/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Primeiro Site</title>
     <link rel="icon" href="" type="image/jpg" sizes="16x16">
-    <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap-grid.min.css">
+    <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 
@@ -25,6 +25,30 @@
             </ul>
         </nav>
     </header>
+
+    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="d-block w-100" src="img/img1.jpeg" alt="Primeiro Slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="img/img2.jpg" alt="Segundo Slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="img/img3.jpg" alt="Terceiro Slide">
+            </div>
+        </div>           
+                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Anterior</span>
+                </a>
+
+                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Proximo</span>
+                </a>           
+    </div>
+
     <div class="section-banner-home">
         <div class="container-fluid">
             <div class="row m-0">
@@ -256,7 +280,7 @@
                                         <a href="#">Hardware</a><br>
                                         <a href="#">Celulares</a><br>
                                         <a href="#">pc-gamer</a><br>
-                                        <a href="#">Contato</a><br>
+                                        <a href="file:///Z:/CT%20TI%20D/Renato%20Schumacker/_git/HTML/Web/EP2%2006-10/contato.html">Contato</a><br>
                                         <a href="#">Login</a><br>
                                     </div>
                                     <!-- fim das midias sociais-->
