--- a/EP2 06-10/index.html
+++ b/EP2 06-10/index.html
@@ -12,11 +12,42 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-lg navbar-ligth bg-ligth">
+        <a class="navbar-brand" href="index.html"><img src="img/senai_small.jpg" alt=""></a>
+        <button class="navbar-toggler type=button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Alterar navegação">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="jogo.html">Jogos <span class="sr-only"></span></a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="hardware.html">Hardware</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="celulares.html">Celulares</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="pc-gamer.html">PC Gamer</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="contato.html">Contato</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="login.html">Login</a>
+                </li>
+            </ul>
+        </div>
+
+    </nav>
+
     <header>
         <nav class="menu_top">
             <img class="img-logo" src="img/senai.png" alt="Logo Senai">
             <ul class="menu">
-                <a class="linkMenu" href="jogos.html">Jogos</a>
+                
+                <a class="linkMenu" href="jogo.html">Jogos</a>
                 <a class="linkMenu" href="hardware.html">Hardware</a> 
                 <a class="linkMenu" href="celulares.html">Celulares</a>
                 <a class="linkMenu" href="pc-gamer.html">PC Gamer</a>
@@ -25,30 +56,30 @@
             </ul>
         </nav>
     </header>
-
-    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+<!-- inicio carrocel-->
+    <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
-            <div class="carousel-item active">
+            <div class="carousel-item active" data-bs-interval="3500">
                 <img class="d-block w-100" src="img/img1.jpeg" alt="Primeiro Slide">
             </div>
-            <div class="carousel-item">
+            <div class="carousel-item" data-bs-interval="3500">
                 <img class="d-block w-100" src="img/img2.jpg" alt="Segundo Slide">
             </div>
-            <div class="carousel-item">
+            <div class="carousel-item" data-bs-interval="3500">
                 <img class="d-block w-100" src="img/img3.jpg" alt="Terceiro Slide">
             </div>
         </div>           
-                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-bs-slide="prev">
+                <button class="carousel-control-prev" data-bs-target="#carouselExampleInterval" role="button" data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="sr-only">Anterior</span>
-                </a>
+                </button>
 
-                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-bs-slide="next">
+                <button class="carousel-control-next" data-bs-target="#carouselExampleInterval" role="button" data-bs-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="sr-only">Proximo</span>
-                </a>           
+                </button>           
     </div>
-
+<!-- fim carrocel-->
     <div class="section-banner-home">
         <div class="container-fluid">
             <div class="row m-0">
@@ -65,7 +96,7 @@
                             recusandae molestiae cupiditate deserunt accusantium assumenda molestias asperiores nam
                             aspernatur iure, exercitationem libero temporibus iusto sed quidem! Beatae, quam.
                         </p>
-                        <a href="jogos.html">Saiba mais</a>
+                        <a href="jogo.html">Saiba mais</a>
                     </section>
                 </div>
             </div>
@@ -83,7 +114,7 @@
                 <!-- Início da Imagem 1 -->
                 <div class="col-6 col-md-2 pr-0">
                     <figure>
-                        <a href="/jogos.html">
+                        <a href="/jogo.html">
                             <img src="img/mario-bros.jpg" alt="galeria" width="100%">
                         </a>
                     </figure>
@@ -93,7 +124,7 @@
                 <!-- inicio da imagem 2 -->
                 <div class="col-6 col-md-2 pr-0">
                     <figure>
-                        <a href="/jogos.html">
+                        <a href="/jogo.html">
                             <img src="img/mario-bros.jpg" alt="galeria" width="100%">
                         </a>
                     </figure>
@@ -103,7 +134,7 @@
                 <!-- inicio da imagem 3 -->
                 <div class="col-6 col-md-2 pr-0">
                     <figure>
-                        <a href="/jogos.html">
+                        <a href="/jogo.html">
                             <img src="img/mario-bros.jpg" alt="galeria" width="100%">
                         </a>
                     </figure>
@@ -113,7 +144,7 @@
                 <!-- inicio da imagem 4 -->
                 <div class="col-6 col-md-2 pr-0">
                     <figure>
-                        <a href="/jogos.html">
+                        <a href="/jogo.html">
                             <img src="img/mario-bros.jpg" alt="galeria" width="100%">
                         </a>
                     </figure>
@@ -123,7 +154,7 @@
                 <!-- inicio da imagem 5 -->
                 <div class="col-6 col-md-2 pr-0">
                     <figure>
-                        <a href="/jogos.html">
+                        <a href="/jogo.html">
                             <img src="img/mario-bros.jpg" alt="galeria" width="100%">
                         </a>
                     </figure>
@@ -133,7 +164,7 @@
                 <!-- Início Saiba Mais -->
                 <div class="col-12">
                     <section>
-                        <a href="/jogos.html"> Saiba Mais </a>
+                        <a href="/jogo.html"> Saiba Mais </a>
                     </section>
                 </div>
                 <!-- Fim Saiba Mais -->
@@ -276,7 +307,7 @@
                                             <a href="#"><img src="img/linkedin.png"></a>
                                         </figure>
                                         <br>
-                                        <a href="#">Jogos</a><br>
+                                        <a href="file:///Z:/CT%20TI%20D/Renato%20Schumacker/_git/HTML/Web/EP2%2006-10/jogo.html">Jogos</a><br>
                                         <a href="#">Hardware</a><br>
                                         <a href="#">Celulares</a><br>
                                         <a href="#">pc-gamer</a><br>
