--- a/EP2 06-10/index_1.html
+++ b/EP2 06-10/index_1.html
@@ -12,21 +12,38 @@
 </head>
 
 <body>
-    <header>
-        <nav class="menu_top">
-            <img class="img-logo" src="img/senai.png" alt="Logo Senai">
-            <ul class="menu">
-                <a class="linkMenu" href="index.html">Home</a>
-                <a class="linkMenu" href="jogo.html">Jogos</a>
-                <a class="linkMenu" href="hardware.html">Hardware</a> 
-                <a class="linkMenu" href="celulares.html">Celulares</a>
-                <a class="linkMenu" href="pc-gamer.html">PC Gamer</a>
-                <a class="linkMenu" href="contato.html">Contato</a>
-                <a class="linkMenu login" href="login.html">Login</a>
+    <nav class="navbar navbar-expand-lg navbar-ligth bg-ligth">
+        <a class="navbar-brand" href="index.html"><img src="img/senai.png" alt=""></a>
+        <button class="navbar-toggler type=button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Alterar navegação">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="jogo.html">Jogos <span class="sr-only"></span></a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="hardware.html">Hardware</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="celulares.html">Celulares</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="pc-gamer.html">PC Gamer</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="contato.html">Contato</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="login.html">Login</a>
+                </li>
             </ul>
-        </nav>
-    </header>
+        </div>
 
+    </nav>
+
+    
+<!-- inicio carrocel-->
     <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="3500">
@@ -49,7 +66,7 @@
                     <span class="sr-only">Proximo</span>
                 </button>           
     </div>
-
+<!-- fim carrocel-->
     <div class="section-banner-home">
         <div class="container-fluid">
             <div class="row m-0">
@@ -277,7 +294,7 @@
                                             <a href="#"><img src="img/linkedin.png"></a>
                                         </figure>
                                         <br>
-                                        <a href="#">Jogos</a><br>
+                                        <a href="file:///Z:/CT%20TI%20D/Renato%20Schumacker/_git/HTML/Web/EP2%2006-10/jogo.html">Jogos</a><br>
                                         <a href="#">Hardware</a><br>
                                         <a href="#">Celulares</a><br>
                                         <a href="#">pc-gamer</a><br>
@@ -300,5 +317,7 @@
 </body>
 
 <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
+
+<script type="text/javascript" src="js/jquery-3.6.0.min.js"></script>
 
 </html>
